  When non-nil, after uncomment indent lines.

- boolean `py-indent-paren-spanned-multilines-p, default is nil
  If non-nil, indents elements of list a value of `py-indent-offset' to first element: 
  def foo():
      if (foo &&
              baz):
          bar()

  Default lines up with first element:

  def foo():
      if (foo &&
          baz):
          bar()

- boolean `py-load-skeletons-p', default nil
  If skeleton definitions should be loaded

- boolean `py-if-name-main-permission-p', default is non-nil.
  Allows execution of code inside blocks started by
  if __name__== '__main__'

- exception displayed points to source, not to the temporary file executed internally

- `py-which-def-or-class', command, now used `which-function-mode' 

- unused variable `py-backspace-function' removed

- Bundled third-party-stuff removed as reported conflicting at emacs-mirror, lp:1153998 
  affects autopair.el, smart-operator.el  
  Kept  menu switches resp. commands will issue a warning 

- dropped `py-paragraph-fill-docstring-p'; just `fill-paragraph' should DTRT

- customizable variables listed in directory in doc:
  variables-python-mode.org, variables-python-mode.rst

New in version 6.1.1
---------------------

- comment-related commands:
  py-uncomment 
  py-comment-block, py-comment-clause,
  py-comment-block-or-clause, py-comment-def,
  py-comment-class, py-comment-def-or-class,
  py-comment-statement

- boolean `py-set-fill-column-p'
  If `t', enables use Python specific `fill-column' according to
  `py-docstring-fill-column', default is 72
  and `py-comment-fill-column, default is 79

- boolean `py-tab-shifts-region-p'
  when `t', TAB will indent/cycle the region, not just the current line.

- boolean `py-tab-indents-region-p' 
  when `t', when first TAB doesn't shift, `indent-region' is called

- command from RET customizable via `py-return-key':
  `py-newline-and-indent', `newline' or `py-newline-and-dedent'
